testdata/baselines/reference/submodule/compiler/jsxChildrenWrongType.errors.txt
other.tsx(10,6): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ children: [unknown, string]; }' is not assignable to type 'Readonly<PropsType>'.
      Types of property 'children' are incompatible.
        Type '[unknown, string]' is not assignable to type 'Iterable<boolean, any, any> | [string, number?]'.
          Type '[unknown, string]' is not assignable to type '[string, number?]'.
            Type at position 0 in source is not compatible with type at position 0 in target.
              Type 'unknown' is not assignable to type 'string'.


==== other.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    
    interface PropsType {
        children: [string, number?] | Iterable<boolean>;
    }
    declare class Foo extends React.Component<PropsType, {}> {}
    const b = (
        <Foo>
         ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ children: [unknown, string]; }' is not assignable to type 'Readonly<PropsType>'.
!!! error TS2769:       Types of property 'children' are incompatible.
!!! error TS2769:         Type '[unknown, string]' is not assignable to type 'Iterable<boolean, any, any> | [string, number?]'.
!!! error TS2769:           Type '[unknown, string]' is not assignable to type '[string, number?]'.
!!! error TS2769:             Type at position 0 in source is not compatible with type at position 0 in target.
!!! error TS2769:               Type 'unknown' is not assignable to type 'string'.
!!! related TS2771 react18/react18.d.ts:478:9: The last overload is declared here.
            {<div/> as unknown}
            {"aa"}
        </Foo>
    );